--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
-.head{
-    color: goldenrod;
+@font-face {
+    font-family: "Krona One";
+    src: url("Playwrite_ES/PlaywriteES-VariableFont_wght.ttf");
 }
-.name{
+
+.head {
+    color: goldenrod;
+    font-family: "Krona One";
+}
+
+.name {
     color: rgb(203, 11, 75);
     text-transform: uppercase;
 }
-.wish{
+
+.wish {
     font-weight: bold;
     color: goldenrod;
 }
-.bottom{
+
+.bottom {
     font-style: oblique;
 }
-.userN{
+
+.userN {
     color: rgb(101, 100, 100);
+}
+
+.main-card {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
